gateway and swagger
